--- a/parte1/pom.xml
+++ b/parte1/pom.xml
@@ -8,11 +8,11 @@
 		<version>2.5.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>java.edu.eci.ieti</groupId>
-	<artifactId>SpringBootRestApi</artifactId>
+	<groupId>edu.eci.ieti.SpringBootRestApi</groupId>
+	<artifactId>parte1</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>SpringBootRestApi</name>
-	<description>SpringBootRestApiot</description>
+	<name>parte1</name>
+	<description>project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
